--- a/index.html
+++ b/index.html
@@ -10,7 +10,22 @@
     <main>
         <H1>Penny Flip Game</H1>
         <div>
-            <div>Penny Image Display, Button Controls, and Status Message</div>
+                
+            <div>
+                <img 
+                    id="penny-heads" 
+                    src="assets/images/penny-heads.jpg" 
+                    alt="image penny heads"/>
+            </div>   
+            <div class="controls">
+                <button id="flip">Flip the penny!</button>
+                <button id="clear">Clear Scoreboard</button>
+            </div>
+            <div class=messageBox>
+                <h1>"Let's get rolling!"</h1>
+            </div>
+        
+        </div>
             <hr>
             <div>
                 <h2>Scoreboard</h2>
